--- a/code/src/index.css
+++ b/code/src/index.css
@@ -16,11 +16,66 @@ body {
 .image-container{
   overflow: hidden;
   width: 100%;
+  position: relative;
+}
+.buttons-container{
+  border: white 2px solid black;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right:0;
+  left:0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(75, 74, 77, 0);
+}
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.buttons-container:hover{
+  background-color: rgba(75, 74, 77, 0.514);
+}
+.buttons-container > .wrapper {
+    display: none;
+}
+.buttons-container:hover > .wrapper {
+  display: flex;
+}
+
+.play-button{
+  z-index: 1;
+  width: 60px;
+  margin: 10px;
+  filter: invert(100%)
+  /* background-color: white; */
+}
+
+.play-button:hover {
+  transform: scale(1.3);
+}
+.heart {
+  filter: invert(100%);
+  width: 20px;
+  z-index: 1;
+  margin: 10px;
+}
+.dots {
+  filter: invert(100%);
+  width: 30px;
+  z-index: 1;
+  margin: 10px;
 }
 .image{
   width: 100%;
   object-fit: cover;
+  z-index: 2;
 }
+
 .album-card{
   margin-bottom: 30px;
 }
@@ -30,6 +85,7 @@ body {
   text-decoration: none;
   margin-right: 5px;
 }
+
 
 
 code {
