--- a/code/src/index.css
+++ b/code/src/index.css
@@ -4,6 +4,7 @@ html{
 
 body {
   margin: 0;
+  background-color: #000000;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -23,14 +24,28 @@ code {
   display: grid;
   grid-template-columns: 1fr 1fr;
   height: 80px;
-  padding-top: 40px;
+  padding: 20px 0 20px 0;;
   width: 100%;
   margin-bottom: 20px;
 }
+
+.logo {
+  width: 100px;
+  margin-left:5px;
+}
+
 .hamburger {
   width: 70px;
   justify-self: end;
+  align-self: center;
+  margin-right: 2px;
+  cursor: pointer;
 }
+
+.hamburger:hover {
+  opacity: 0.5;
+}
+
 .nav{
   justify-self: end;
   display:none;
@@ -40,12 +55,25 @@ code {
   text-decoration: none;
   color: #ffff;
 }
+
+
 .icon{
   width: 40px;
+}
+
+.album-container {
+  display: grid;
+  width: 80%;
+  margin: auto;
 }
 .album-name {
   display: block;
 }
+
+.album-image {
+  width: 100%;
+}
+
 .footer{
   background-color: #444444;
   color: #ffff;
@@ -78,11 +106,47 @@ code {
   
   .header{
     grid-template-columns: 1fr 2fr;
+    padding: 25px 0 80px 0;
+    margin-bottom: 30px;
+  }
+
+  .logo {
+    width: 150px;
+    margin-left: 5px;
   }
   .hamburger {
     display: none;
   }
   .nav {
     display: block;
+    align-self: center;
+    font-size: 20px;
   }
+  .album-container {
+    grid-template-columns: 1fr 1fr;
+    column-gap: 20px;
+  }
+  
+}
+
+@media (min-width: 1100px) {
+  .header {
+    padding: 25px 0 140px 0;
+    
+  }
+
+  .logo {
+    width: 250px;
+    margin-left:10px;
+  }
+  .nav-item{
+    margin-right: 20px;
+    text-decoration: none;
+    font-size: 25px;
+  }
+
+  .album-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+ 
 }
