--- a/code/src/index.css
+++ b/code/src/index.css
@@ -57,21 +57,100 @@ code {
 }
 
 
-.icon{
-  width: 40px;
-}
+
 
 .album-container {
   display: grid;
   width: 80%;
   margin: auto;
 }
+
+.album-card {
+  margin-bottom: 30px;
+}
+
 .album-name {
   display: block;
 }
 
 .album-image {
   width: 100%;
+}
+.image-container {
+  position: relative;
+}
+.icons-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /*width: 100%;
+  height: 100%;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.icons-container:hover {
+  background-color: rgba(75, 75, 75, 0.5);
+}
+.icons-container > .hover-container {
+  display: none;
+}
+.icons-container:hover > .hover-container {
+  display: flex;
+}
+.hover-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.heart {
+  width: 40px;
+  margin: 20px;
+}
+.play {
+  width: 80px;
+  margin: 20px;
+  opacity: 0.7;
+}
+
+.play:hover {
+  transform: scale(1.3);
+  opacity: 1;
+}
+.dots {
+  width: 40px;
+  margin: 20px;
+}
+
+.album-name {
+  font-size: 14px;
+  font-family: Helvetica, sans-serif;
+  text-decoration: none;
+  color: #ffffff;
+  margin: 10px 0 10px 0;
+}
+
+.album-name:hover {
+  text-decoration: underline;
+  text-decoration-color: #a0a0a0;
+  text-decoration-thickness: 2px;
+}
+
+.artist-name {
+  font-size: 14px;
+  font-family: Helvetica, sans-serif;
+  text-decoration: none;
+  color: #a0a0a0;
+}
+
+.artist-name:hover {
+    text-decoration: underline;
+    text-decoration-color: #a0a0a0;
+    text-decoration-thickness: 2px;
+    color: #ffffff;
 }
 
 .footer{
@@ -102,6 +181,24 @@ code {
   padding-top: 10px;
   padding-bottom: 20px;
 }
+
+@media (max-width: 350px) {
+  .heart {
+    width: 30px;
+    margin: 15px;
+  }
+
+  .play {
+    width: 60px;
+    margin: 15px;
+  }
+
+  .dots {
+    width: 30px;
+    margin: 15px;
+  }
+}
+
 @media (min-width: 648px) {
   
   .header{
@@ -127,19 +224,22 @@ code {
     column-gap: 20px;
   }
   
+  .album-name, .artist-name {
+    font-size: 18px;
+  }
 }
 
 @media (min-width: 1100px) {
   .header {
     padding: 25px 0 140px 0;
-    
   }
 
   .logo {
     width: 250px;
     margin-left:10px;
   }
-  .nav-item{
+
+  .nav-item {
     margin-right: 20px;
     text-decoration: none;
     font-size: 25px;
@@ -148,5 +248,39 @@ code {
   .album-container {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
- 
+
+  .heart {
+    width: 30px;
+    margin: 15px;
+  }
+
+  .play {
+    width: 60px;
+    margin: 15px;
+  }
+
+  .dots {
+    width: 30px;
+    margin: 15px;
+  }
+  .album-name, .artist-name {
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 1500px) {
+  .heart {
+    width: 40px;
+    margin: 20px;
+  }
+
+  .play {
+    width: 80px;
+    margin: 20px;
+  }
+
+  .dots {
+    width: 40px;
+    margin: 20px;
+  }
 }
