Implemented Javascript Solution for comma

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -126,14 +126,14 @@ h1 {
   margin-right: 5px;
 }
 
-.artist-name:not(:first-child, :last-child):before{
+/* .artist-name:not(:first-child, :last-child):before{
   color: #a0a0a0;
   content: ", ";
 }
 .artist-name:last-child::before {
   content: " & ";
   color: #a0a0a0;
-}
+} */
 .artist-name:only-child::before { 
   content: ""; 
 }
