--- a/code/src/index.css
+++ b/code/src/index.css
@@ -57,6 +57,34 @@ code {
   display: inline;
 }
 
+
+.aside {
+  display: none;
+  flex-direction: column;
+  padding-left: 20px;
+}
+.section-container {
+  border-left: 2px solid #444444;
+}
+
+.playlist-heading {
+  color: #ffffff;
+  margin: 0;
+  padding-bottom: 20px;
+}
+
+.playlist-name {
+  text-decoration: none;
+  color: #ffffff;
+  padding-bottom: 10px;
+  
+}
+
+.playlist-name:hover {
+  text-decoration: underline;
+
+}
+
 .section-heading {
   color: #ffffff;
   display: grid;
@@ -269,6 +297,13 @@ code {
     display: block;
     align-self: center;
     font-size: 20px;
+  }
+  .main {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+  }
+  .aside {
+    display: flex;
   }
   .album-container {
     grid-template-columns: 1fr 1fr;
