--- a/code/src/index.css
+++ b/code/src/index.css
@@ -16,8 +16,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
-.header{
+/*Header*/
+.header {
   background-color: #444444;
   color: #ffff;
   margin: 0;
@@ -46,23 +46,25 @@ code {
   opacity: 0.5;
 }
 
-.nav{
+.nav {
   justify-self: end;
   display:none;
 }
-.nav-item{
+
+.nav-item {
   margin-right: 20px;
   text-decoration: none;
   color: #ffff;
   display: inline;
 }
 
-
+/*aside styling*/
 .aside {
   display: none;
   flex-direction: column;
   padding-left: 20px;
 }
+
 .section-container {
   border-left: 2px solid #444444;
 }
@@ -77,14 +79,13 @@ code {
   text-decoration: none;
   color: #ffffff;
   padding-bottom: 10px;
-  
 }
 
 .playlist-name:hover {
   text-decoration: underline;
-
 }
 
+/*sections styling*/
 .section-heading {
   color: #ffffff;
   display: grid;
@@ -92,12 +93,14 @@ code {
   margin: auto;
   padding-bottom: 15px;
 }
+
 .album-container {
   display: grid;
   width: 80%;
   margin: auto;
 }
 
+/*album card styling*/
 .album-card {
   margin-bottom: 30px;
 }
@@ -109,40 +112,35 @@ code {
 .album-image {
   width: 100%;
 }
+
 .image-container {
   position: relative;
 }
+
 .icons-container {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  /*width: 100%;
-  height: 100%;*/
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .icons-container:hover {
   background-color: rgba(75, 75, 75, 0.5);
 }
+
 .icons-container > .hover-container {
   display: none;
 }
+
 .icons-container:hover > .hover-container {
   display: flex;
 }
 
-.icons-container:focus {
-  background-color: rgba(75, 75, 75, 0.5);
-}
-
-.icons-container:focus > .hover-container {
-  display: flex;
-}
-
-.hover-container{
+.hover-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -152,6 +150,7 @@ code {
   width: 40px;
   margin: 20px;
 }
+
 .play {
   width: 80px;
   margin: 20px;
@@ -162,10 +161,12 @@ code {
   transform: scale(1.3);
   opacity: 1;
 }
+
 .play:focus {
   transform: scale(1.3);
   opacity: 1;
 }
+
 .dots {
   width: 40px;
   margin: 20px;
@@ -198,6 +199,7 @@ code {
     text-decoration-thickness: 2px;
     color: #ffffff;
 }
+/*We want to keep this commented out solution for comma for future reference*/
 /* .artist-name:not(:first-child, :last-child)::before {
   color: #a0a0a0;
   content: ", ";
@@ -210,29 +212,27 @@ code {
   content: ""; 
 } */
 
-.footer{
+/*footer styling*/
+.footer {
   background-color: #444444;
   color: #ffff;
   text-align: center;
   margin: 0;
   padding: 15px;
 }
-.socialmedia{
-  /*display: grid;*/
+
+.socialmedia {
   display: flex;
-  /*grid-template-columns: 1fr 1fr 1fr;*/
   justify-content: center;
   justify-items: center;
   align-items: center;
-  /* border: 2px solid pink; */
   width: 100%;
-
 }
+
 .button {
-  /*width: 100%;*/
-  /*align-items: center;*/
   margin: 20px;
 }
+
 .fa {
   padding: 18px;
   font-size: 18px;
@@ -261,6 +261,7 @@ code {
   font-size: 12px;
 }
 
+/*media queries*/
 @media (max-width: 350px) {
   .heart {
     width: 30px;
@@ -279,8 +280,7 @@ code {
 }
 
 @media (min-width: 648px) {
-  
-  .header{
+  .header {
     grid-template-columns: 1fr 2fr;
     padding: 25px 0 80px 0;
     margin-bottom: 30px;
@@ -290,21 +290,26 @@ code {
     width: 150px;
     margin-left: 5px;
   }
+
   .hamburger {
     display: none;
   }
+  
   .nav {
     display: block;
     align-self: center;
     font-size: 20px;
   }
+
   .main {
     display: grid;
     grid-template-columns: 1fr 3fr;
   }
+
   .aside {
     display: flex;
   }
+  
   .album-container {
     grid-template-columns: 1fr 1fr;
     column-gap: 20px;
@@ -349,6 +354,7 @@ code {
     width: 30px;
     margin: 15px;
   }
+  
   .album-name, .artist-name {
     font-size: 20px;
   }
