--- a/code/src/index.css
+++ b/code/src/index.css
@@ -60,60 +60,70 @@ h1 {
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0;
+  /* top: 0; */
   left: 0;
   right:0;
-  left:0;
+  /* bottom:0; */
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgba(75, 74, 77, 0);
+  z-index: 2;
 }
 .wrapper {
+  visibility: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;
+  width: 100%;
 }
-.buttons-container:hover{
+/* .image:hover {
+  filter: brightness(50%);
+} */
+/* .buttons-container:hover{
   background-color: rgba(75, 74, 77, 0.514);
+} */
+/* .image:hover ~  .buttons-container{
+  display:flex;
+} */
+.buttons-container:hover ~ .image {
+  filter: brightness(50%);
 }
-.buttons-container > .wrapper {
-    display: none;
-}
-.buttons-container:hover > .wrapper {
-  display: flex;
+.buttons-container:hover .wrapper {
+  visibility: visible;
 }
 
 .play-button{
-  z-index: 1;
-  width: 60px;
-  margin: 10px;
+  /* z-index: 1; */
+  width: 30%;
+  margin: auto;
   filter: invert(100%);
   opacity: 0.5;
-  /* background-color: white; */
+  /* transition: 0.5s; */
 }
 
 .play-button:hover {
   transform: scale(1.3);
   opacity: 1;
+  transition: 1s;
 }
 .heart {
   filter: invert(100%);
-  width: 20px;
-  z-index: 1;
-  margin: 10px;
+  width: 10%;
+  margin: auto;
 }
 .dots {
   filter: invert(100%);
-  width: 30px;
-  z-index: 1;
-  margin: 10px;
+  width: 10%;
+  margin: auto;
   opacity: 0.7;
 }
 .image{
   width: 100%;
   object-fit: cover;
-  z-index: 2;
+  z-index: 3;
+  transition-duration: 0.2s;
 }
 
 .album-card{
@@ -134,9 +144,9 @@ h1 {
   content: " & ";
   color: #a0a0a0;
 } */
-.artist-name:only-child::before { 
+/* .artist-name:only-child::before { 
   content: ""; 
-}
+} */
 /* .artist-name:first-child {
   color: red;
 } */
