--- a/code/src/index.css
+++ b/code/src/index.css
@@ -147,13 +147,15 @@ code {
 }
 
 .heart {
-  width: 40px;
-  margin: 20px;
+  /* width: 40px; */
+  width: 10%;
+  margin: 10px;
 }
 
 .play {
-  width: 80px;
-  margin: 20px;
+  /* width: 80px; */
+  width: 40%;
+  margin: 10px;
   opacity: 0.7;
 }
 
@@ -168,8 +170,9 @@ code {
 }
 
 .dots {
-  width: 40px;
-  margin: 20px;
+  /* width: 40px; */
+  width: 10%;
+  margin: 10px;
 }
 
 .album-name {
