--- a/code/src/index.css
+++ b/code/src/index.css
@@ -147,16 +147,16 @@ code {
 }
 
 .heart {
-  /* width: 40px; */
   width: 10%;
-  margin: 10px;
+  margin: 25px;
 }
-
+.play-container{
+  width: 40%
+}
 .play {
-  /* width: 80px; */
-  width: 40%;
-  margin: 10px;
+  width: 100%;
   opacity: 0.7;
+  transition: 0.5s ease-in;
 }
 
 .play:hover {
@@ -170,9 +170,8 @@ code {
 }
 
 .dots {
-  /* width: 40px; */
   width: 10%;
-  margin: 10px;
+  margin: 25px;
 }
 
 .album-name {
@@ -266,7 +265,7 @@ code {
 
 /*media queries*/
 @media (max-width: 350px) {
-  .heart {
+  /* .heart {
     width: 30px;
     margin: 15px;
   }
@@ -279,7 +278,7 @@ code {
   .dots {
     width: 30px;
     margin: 15px;
-  }
+  } */
 }
 
 @media (min-width: 648px) {
@@ -343,7 +342,7 @@ code {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 
-  .heart {
+  /* .heart {
     width: 30px;
     margin: 15px;
   }
@@ -356,7 +355,7 @@ code {
   .dots {
     width: 30px;
     margin: 15px;
-  }
+  } */
   
   .album-name, .artist-name {
     font-size: 20px;
@@ -364,7 +363,7 @@ code {
 }
 
 @media (min-width: 1500px) {
-  .heart {
+  /* .heart {
     width: 40px;
     margin: 20px;
   }
@@ -377,5 +376,5 @@ code {
   .dots {
     width: 40px;
     margin: 20px;
-  }
+  } */
 }
